[gd_scene load_steps=16 format=2]

[ext_resource path="res://ui/intro/horse_selection.gd" type="Script" id=1]
[ext_resource path="res://ui/font12.tres" type="DynamicFont" id=2]
[ext_resource path="res://horsie/horsie.png" type="Texture" id=3]
[ext_resource path="res://ui/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/LLPIXEL3.ttf" type="DynamicFontData" id=5]

[sub_resource type="Theme" id=3]
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/pressed = null

[sub_resource type="DynamicFontData" id=1]
font_path = "res://ui/LLPIXEL3.ttf"

[sub_resource type="DynamicFont" id=2]
size = 15
outline_size = 1
outline_color = Color( 0.670588, 0.0666667, 0.0666667, 1 )
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=10]
size = 10
font_data = ExtResource( 5 )

[node name="HorseSelection" type="Node2D"]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 686.0
margin_bottom = 460.0
color = Color( 0.372549, 0.333333, 0.0392157, 0.588235 )

[node name="Names" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 65.0
margin_top = 46.0
custom_constants/vseparation = 56
custom_constants/hseparation = 58
columns = 5

[node name="BackButton" type="Button" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 97.2857
margin_top = 399.572
margin_right = 164.286
margin_bottom = 442.572
theme = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.909804, 0.0392157, 0.0392157, 1 )
custom_colors/font_color_pressed = Color( 0.0235294, 0.839216, 0.0352941, 1 )
custom_fonts/font = ExtResource( 2 )
text = "BACK"

[node name="StartButton" type="Button" parent="."]
modulate = Color( 0, 1, 0.0627451, 1 )
margin_left = 177.0
margin_top = 400.0
margin_right = 389.0
margin_bottom = 443.0
theme = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.909804, 0.0392157, 0.0392157, 1 )
custom_colors/font_color_pressed = Color( 0.0235294, 0.839216, 0.0352941, 1 )
custom_fonts/font = ExtResource( 2 )
text = "START"

[node name="SliderBackground" type="ColorRect" parent="."]
margin_left = 447.143
margin_top = 384.286
margin_right = 680.143
margin_bottom = 452.286
color = Color( 0.372549, 0.333333, 0.0392157, 0.588235 )

[node name="HSlider" type="HSlider" parent="SliderBackground"]
margin_left = 77.0
margin_top = 3.0
margin_right = 283.0
margin_bottom = 36.0
rect_min_size = Vector2( 20, 16 )
rect_scale = Vector2( 0.714626, 1.80766 )
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
min_value = 1.0
max_value = 10.0
value = 5.0
tick_count = 10
ticks_on_borders = true

[node name="Laps" type="Label" parent="SliderBackground/HSlider"]
margin_left = -101.752
margin_top = -3.24016
margin_right = -45.7515
margin_bottom = 21.7598
rect_scale = Vector2( 2.43931, 1.03173 )
custom_colors/font_color = Color( 0.87451, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Laps"

[node name="Label" type="Label" parent="SliderBackground/HSlider/Laps"]
margin_left = 9.8342
margin_top = 22.9794
margin_right = 49.8342
margin_bottom = 53.9794
custom_colors/font_color = Color( 1, 0.937255, 0, 1 )
text = "X
"

[node name="LastWinnersButton" type="Button" parent="."]
modulate = Color( 1, 0.862745, 0, 1 )
margin_left = 5.71429
margin_top = 400.0
margin_right = 146.714
margin_bottom = 429.0
rect_scale = Vector2( 0.549016, 1.62629 )
custom_colors/font_color = Color( 0.968627, 1, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Past Winners"
clip_text = true
expand_icon = true

[node name="LastWinnersPopup" type="Popup" parent="."]
visible = true
margin_left = 7.0
margin_top = 17.0
margin_right = 272.0
margin_bottom = 440.0

[node name="ColorRect" type="ColorRect" parent="LastWinnersPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0, 0.32549, 1 )

[node name="Label" type="Label" parent="LastWinnersPopup"]
margin_left = 24.2857
margin_top = 14.2857
margin_right = 64.2857
margin_bottom = 28.2857
text = "XXXX"

[node name="OfficialRaceCheckBox" type="CheckBox" parent="."]
margin_left = 450.0
margin_top = 352.857
margin_right = 606.0
margin_bottom = 385.857
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/hover_pressed = SubResource( 9 )
custom_styles/normal = SubResource( 4 )
text = "Official Race"

[node name="Control" type="Control" parent="OfficialRaceCheckBox"]
margin_left = 23.0
margin_top = 7.0
margin_right = 140.0
margin_bottom = 33.0

[node name="ToolTip" type="ColorRect" parent="OfficialRaceCheckBox/Control"]
visible = false
margin_left = 31.0
margin_top = -53.0
margin_right = 172.0
margin_bottom = -3.0
color = Color( 1, 0, 0, 0.52549 )

[node name="Label" type="Label" parent="OfficialRaceCheckBox/Control/ToolTip"]
margin_right = 143.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 10 )
text = "When checked, the race winner will be added to the Past Winners list."
align = 1
autowrap = true

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="LastWinnersButton" to="." method="_on_LastWinnersButton_pressed"]
[connection signal="mouse_entered" from="OfficialRaceCheckBox/Control" to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="OfficialRaceCheckBox/Control" to="." method="_on_Control_mouse_exited"]
